syntax="proto3";

package kazimir.cooltech.proto;
//option java_outer_classname = "Order";

message Order {
  string id = 1;
  string user_id = 2;
  string product_id = 3;
  int32 quantity = 4;
  double price = 5;
  string order_processor_id = 6;
}